syntax = "proto3";

package com.kohan.proto.authentication.v1;

message UserToken {
  string token = 1;
}

message UserDto {
  string objectId = 1;
  string email = 2;
  string nickname = 3;
  string profileImageUrl = 4;
}

service AuthenticationService {
  rpc authenticateUser(UserToken) returns (UserDto) {}
}